2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* zlib.c: Include "pagealign_alloc.h".

2005-03-09 Derek Price <derek@ximbiot.com>

	* add.c (add, add_directory), buffer.c (allocate_buffer_datas),
	client.c (update_entries), commit.c (checkaddfile), entries.c
	(Entries_Open), fileattr.c (fileattr_read), ignore.c (ign_add),
	import.c (import), main.c (main), parseinfo.c (parse_config), rcs.c
	(RCS_reparsercsfile, RCS_getbranchpoint, RCS_checkout,
	RCS_delete_revs, apply_rcs_changes): Avoid memory leaks.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

	* hardlink.c, hardlink.h: Avoid compiling entire contents of these
	files w/o preserve permissions support.

2005-03-09  Mark D. Baushke  <mdb@cvshome.org>

	* history.c (history, save_file): Cleanup the API to match the
	comments.

2005-03-08  Derek Price  <derek@ximbiot.com>

	* rcs.c: Define MAP_FILE & MAP_FAILED when necessary.

2005-03-08  Derek Price  <derek@ximbiot.com>

	* zlib.c (compress_buffer_input): Use pagealign_xalloc when allocating
	buffer datas.
	(compress_buffer_output, compress_buffer_flush,
	compress_buffer_shutdown_output): Don't assume that BUFFER_DATA_SIZE is
	a constant.
	(Thanks to report from Larry Jones <lawrence.jones@ugs.com>.)

2005-03-08  Larry Jones  <lawrence.jones@ugs.com>

	* release.c (release): Remove unneeded code.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* buffer.h (buf_free_data): Compile with proxy disabled.
	(Thanks to report from Larry Jones <lawrence.jones@ugs.com>.)

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* add.c (add_directory): Xasprintf instead of xmalloc/sprintf+strcat.
	* admin.c (arg_add): Ditto.
	(admin_fileproc, postadmin_proc, admin_fileproc): Gratuitous
	reformatting.

	* client.c (mode_to_string): Use Xasprintf.
	
	* checkout.c (checkout): Xasprintf instead of xmalloc/sprintf.
	Gratuitous reformatting.
	* entries.c (WriteTag): Ditto
	(subdir_record, base_walk): Ditto.